# Codex-ai-interviewer-panel

./: .env.example  .gitignore  Dockerfile  LOCAL_MVP_RUNBOOK.md  README.md  docker-compose.yml  package-lock.json  package.json  phase12_realtime_optimization.md  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci-cd.yml
app/: globals.css  main.py  page.tsx
app/api/: deps.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  interview.py  user.py
app/monitoring/: health.py
app/schemas/: auth.py  interview.py
app/services/: session_cache.py
app/ws/: manager.py
backend/: Dockerfile  package.json  requirements.txt
backend/app/: main.py
backend/src/: server.js
components/common/: status-badge.tsx
components/layout/: app-shell.tsx
components/realtime/: audio-video-panel.tsx  avatar-container.tsx  transcript-panel.tsx
components/recruiter/: metrics-grid.tsx
docs/: PRODUCTION_AUDIT.md  architecture.md  production-deployment.md
env/: .env.production.template
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx
hooks/: useInterviewRealtime.ts
infra/nginx/: default.conf
k8s/base/: autoscaling.yaml  deployments.yaml  kustomization.yaml  namespace.yaml
monitoring/loki/: loki-config.yaml
monitoring/otel/: collector-config.yml
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh
services/: websocket-client.ts
shared/: models.md
src/: realtime_optimization_reference.ts
stores/: interview-store.ts
types/: interview.ts
(+108 files in other folders)
