[project]
name = "ai-interviewer-backend"
version = "0.1.0"
description = "Backend services for AI Interviewer platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "redis>=5.0.4",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "langchain>=0.2.7",
  "langchain-community>=0.2.7",
  "langchain-chroma>=0.1.2",
  "chromadb>=0.5.4",
  "httpx>=0.27.0",
  "orjson>=3.10.6",
  "structlog>=24.2.0"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
